# OpenJPEGJNI

./: .gitignore  BUILD-STEPS.md  CMakeLists.txt  HOW-I-FIXED-JNI.md  LICENSE  README.md  USAGE-NOTES.md
wrapping/java/openjp2/: CMakeLists.txt  JavaOpenJPEGDecoder.c  org_openJpeg_OpenJPEGJavaDecoder.h
wrapping/java/openjp2/java-sources/org/openJpeg/: OpenJPEGJavaDecoder.java  OpenJPEGJavaEncoder.java
